--- a/index.html
+++ b/index.html
@@ -1,28 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | QR code component</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+    <title>QR-CODE</title>
+
+    <link rel="shortcut icon" type="image/ico" href="uri" />
+    <link rel="stylesheet" href="scss/output.css" />
+
+    <meta name="HandheldFriendly" content="true">
+
 </head>
 <body>
-
-  Improve your front-end skills by building projects
-
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Tudor000002</a>.
-  </div>
+    <main>
+        <img id="qr" src="images/image-qr-code.png" />
+        <p id="titleMain">Imporve your front-end skills by building projects</p>
+        <p id="textMain">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    </main>
 </body>
 </html>
